--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,100 @@
-.settings/
+compiled source #
+###################
+*.com
+*.class
+*.dll
+*.exe
+*.o
+*.so
+
+# Packages #
+############
+# it's better to unpack these files and commit the raw source
+# git has its own built in compression methods
+*.7z
+*.dmg
+*.gz
+*.iso
+*.jar
+*.rar
+*.tar
+*.zip
+*.dex
+
+# Logs and databases #
+######################
+*.log
+*.sql
+*.sqlite
+
+# OS generated files #
+######################
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+Icon?
+ehthumbs.db
+Thumbs.db
+
+########Android Auto Generate##########
 bin/
 gen/
-project.properties
-.classpath
-.project
-lint.xml
-proguard-project.txt
-
-# Android Studio
-*.gradle
-.idea/
-*.iml
 build/
-gradle*
+
+##############################
+# OS generated files 
+##############################
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+*~
+*.swp
+
+##############################
+# built application files
+##############################
+*.apk
+*.ap_
+
+##############################
+# Local configuration file
+##############################
 local.properties
 
-# OSX garbage
-.DS_Store
+##############################
+# Eclipse project files
+##############################
+.classpath
+.project
+.metadata
+
+##############################
+# Proguard folder (Eclipse)
+##############################
+proguard
+
+##############################
+# Intellij project files
+##############################
+*.iml
+*.ipr
+*.iws
+.idea
+.gradle
+build
+captures
+
+##############################
+# NDK
+##############################
+obj
+myanalyisis.db
+gdbserver
+gdb.setup
+
